# psychic-couscous

./: Cargo.toml  test.spi  test2.spi
src/: ast.rs  lambda.rs  machineterm.rs  main.rs  parser.rs  sim.rs  store.rs  symgen.rs  syntax.rs  tokenizer.rs  values.rs
