[package]
name = "spi"
version = "0.1.0"
authors = ["Will Long <will.long043@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
rand = "0.6"
combine = "3.8"
combine-language = "3.0"
structopt = "0.2.10"
csv = "1"
indicatif = "0.11"
diff-enum = "0.1"
lazy_static = "1.3.0"

